--- a/profile.html
+++ b/profile.html
@@ -219,6 +219,8 @@
                 <h3>Customer Service</h3>
                 <ul>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="specials.html">Specials</a></li>
                     <li><a href="#">Shipping Info</a></li>
                     <li><a href="#">Returns</a></li>
                     <li><a href="#">FAQ</a></li>
@@ -228,9 +230,10 @@
                 <h3>Company</h3>
                 <ul>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="history.html">History</a></li>
+                    <li><a href="#">Careers</a></li>
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#" onclick="logout(); return false;">Log Out</a></li>
                 </ul>
             </div>
         </div>
