--- a/shop.html
+++ b/shop.html
@@ -82,47 +82,49 @@
         <div class="products-grid" id="shopProductsGrid"></div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>theStore</h3>
-                <p style="color: #999; line-height: 1.8;">Your destination for minimalist, high-quality fashion and
-                    accessories.</p>
+        <!-- Footer -->
+        <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>theStore</h3>
+                    <p style="color: #999; line-height: 1.8;">Your destination for minimalist, high-quality fashion and
+                        accessories.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Shop</h3>
+                    <ul>
+                        <li><a href="shop.html">All Products</a></li>
+                        <li><a href="category.html?category=polos">Polos</a></li>
+                        <li><a href="category.html?category=pants">Pants</a></li>
+                        <li><a href="category.html?category=watches">Watches</a></li>
+                        <li><a href="category.html?category=glasses">Glasses</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Customer Service</h3>
+                    <ul>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="specials.html">Specials</a></li>
+                        <li><a href="#">Shipping Info</a></li>
+                        <li><a href="#">Returns</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Company</h3>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-section">
-                <h3>Shop</h3>
-                <ul>
-                    <li><a href="shop.html">All Products</a></li>
-                    <li><a href="category.html?category=polos">Polos</a></li>
-                    <li><a href="category.html?category=pants">Pants</a></li>
-                    <li><a href="category.html?category=watches">Watches</a></li>
-                    <li><a href="category.html?category=glasses">Glasses</a></li>
-                </ul>
+            <div class="footer-bottom">
+                <p>&copy; 2025 theStore. All rights reserved.</p>
             </div>
-            <div class="footer-section">
-                <h3>Customer Service</h3>
-                <ul>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="#">Shipping Info</a></li>
-                    <li><a href="#">Returns</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Company</h3>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="history.html">History</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 theStore. All rights reserved.</p>
-        </div>
-    </footer>
+        </footer>
 
     <script src="script.js"></script>
 </body>
